--- a/main.css
+++ b/main.css
@@ -75,13 +75,21 @@
 .Hz {
 	margin-left: 72px;
 }
-
 .mainTime {
 	font-size: 9em;
 	color: red;
 	margin-left: 10%;
 }
-
+.button {
+	height: 20px;
+	width: 50px;
+	background: black;
+	position: absolute;
+	left: 20px;
+	top: -17px;
+	border-radius: 4px;
+	z-index: -1;
+}
 .colon {
 	height: 20px;
 	width: 20px;
